--- a/public/css/index.css
+++ b/public/css/index.css
@@ -88,6 +88,16 @@
     src: url('../webfonts/GreatVibes-Regular.ttf');
 }
 
+@font-face {
+    font-family: PoppinsVN;
+    src: url('../webfonts/DesignerVN-Poppins-Regular.ttf');
+}
+@font-face {
+    font-family: PoppinsVN;
+    src: url('../webfonts/DesignerVN-Poppins-ExtraBold.ttf');
+    font-weight: bold;
+}
+
 .hero-title{
     font-family: Great Vibes !important;
 }
@@ -97,9 +107,34 @@
     width: 40%;
 }
 
+.invite_name{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    font-size: 40px !important;
+    font-family: Great Vibes !important
+}
+
+
 @media (max-width: 767px) {
     .overflow-image {
         width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+    .invite_name{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .invite_name .groom{
+        width: 100%;
+        text-align: left;
+    }
+    .invite_name .bride{
+        width: 100%;
+        text-align: right;
     }
 }
 
@@ -129,4 +164,8 @@
 
 #location, .page-content{
     background-color: #f9f9f9;
+}
+
+body{
+    font-family: 'PoppinsVN';
 }
